--- a/00_test.ipynb
+++ b/00_test.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMA1OYKh5muwnKv3ElRYSV"
+      "authorship_tag": "ABX9TyPldJhGK/VNJXP7K+W/qSfE",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,13 +17,75 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/thewaqasgondal/Deep-Learning-Concepts/blob/main/00_test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "kQ5nIc3V3NMk"
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5983e84a",
+        "outputId": "7002042f-29ab-4f33-9aa7-4f9f99a45d10"
+      },
+      "source": [
+        "import numpy\n",
+        "import pandas\n",
+        "import matplotlib\n",
+        "import seaborn\n",
+        "import sklearn\n",
+        "import tensorflow\n",
+        "import torch\n",
+        "import scipy\n",
+        "import PIL\n",
+        "import requests\n",
+        "\n",
+        "print(f\"Numpy version: {numpy.__version__}\")\n",
+        "print(f\"Pandas version: {pandas.__version__}\")\n",
+        "print(f\"Matplotlib version: {matplotlib.__version__}\")\n",
+        "print(f\"Seaborn version: {seaborn.__version__}\")\n",
+        "print(f\"Scikit-learn version: {sklearn.__version__}\")\n",
+        "print(f\"TensorFlow version: {tensorflow.__version__}\")\n",
+        "print(f\"PyTorch version: {torch.__version__}\")\n",
+        "print(f\"Scipy version: {scipy.__version__}\")\n",
+        "print(f\"Pillow (PIL) version: {PIL.__version__}\")\n",
+        "print(f\"Requests version: {requests.__version__}\")"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Numpy version: 2.0.2\n",
+            "Pandas version: 2.2.2\n",
+            "Matplotlib version: 3.10.0\n",
+            "Seaborn version: 0.13.2\n",
+            "Scikit-learn version: 1.6.1\n",
+            "TensorFlow version: 2.19.0\n",
+            "PyTorch version: 2.9.0+cu126\n",
+            "Scipy version: 1.16.3\n",
+            "Pillow (PIL) version: 11.3.0\n",
+            "Requests version: 2.32.4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
